--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@ PORT=5555
 REACT_APP_MICROSITENAME=admin
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_ENVIRONMENT=Local
-REACT_APP_SECURESTORAGE_SECRET_KEY=ZeroGengs2019!
+REACT_APP_SECURESTORAGE_SECRET_KEY=Rhfauzi77
 REACT_APP_IMAGES=https://storage-service.app.mylab.local/assets/octo_clicks
 
 # Main Service Endpoints 
