--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
+    "@mui/styles": "^5.11.7",
     "@mui/x-data-grid": "^5.17.2",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.79.0",
@@ -37,7 +38,7 @@
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
