--- a/package.json
+++ b/package.json
@@ -3,48 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@ant-design/icons": "^4.2.2",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.5",
-    "@mui/styles": "^5.11.7",
-    "@mui/x-data-grid": "^5.17.2",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^5.17.22",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.79.0",
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.80.0",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@rematch/core": "^2.2.0",
+    "@rematch/core": "^2.1.0",
     "@rematch/persist": "^2.1.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.1.6",
-    "axios": "^1.2.3",
-    "chart.js": "^3.9.1",
-    "connected-react-router": "^6.9.3",
-    "crypto-js": "^4.1.1",
-    "formik": "^2.2.9",
-    "history": "^5.3.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
+    "axios": "^0.19.0",
+    "babel-eslint": "^10.1.0",
+    "connected-react-router": "^6.9.1",
+    "crypto-js": "^3.1.9-1",
+    "formik": "^2.1.5",
+    "history": "^4.10.1",
+    "moment": "^2.24.0",
+    "react": "^16.9.0",
+    "react-dom": "16.9.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-redux": "^8.0.5",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "secure-web-storage": "^1.0.2",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "env-cmd -f .env.local react-scripts start",
@@ -55,12 +55,6 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
